--- a/package.json
+++ b/package.json
@@ -1,7 +1,15 @@
 {
   "name": "jesthmwmatches",
   "version": "1.0.0",
-  "description": "",
+  "description": "[![Build status](https://ci.appveyor.com/api/projects/status/ykfeyt0uvom3t5ti?svg=true)](https://ci.appveyor.com/project/Pokimonka/testjest)",
+  "homepage": "https://github.com/Pokimonka/jestHmwMatches#readme",
+  "bugs": {
+    "url": "https://github.com/Pokimonka/jestHmwMatches/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Pokimonka/jestHmwMatches.git"
+  },
   "license": "ISC",
   "author": "",
   "main": "index.js",
@@ -10,6 +18,9 @@
     "lint": "eslint --fix .",
     "build": "babel src -d dist",
     "prepare": "husky"
+  },
+  "dependencies": {
+    "core-js": "^3.42.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.27.2",
@@ -21,8 +32,5 @@
     "globals": "^16.1.0",
     "husky": "^9.1.7",
     "jest": "^29.7.0"
-  },
-  "dependencies": {
-    "core-js": "^3.42.0"
   }
 }
